--- a/results/platforms/lm3s811-evb.page
+++ b/results/platforms/lm3s811-evb.page
@@ -1,5 +1,5 @@
+== Platform lm3s811-evb =
+     
+=== Fastest Algorithms ===
 
-    = Platform lm3s811-evb =
-    
-    == Fastest Algorithms ==
-  [[SortCSVsourceTable(source:page/trunk/results/fastestPerPlatform/lm3s811-evb.table)]]
+[[SortCSVsourceTable(source:page/trunk/results/fastestPerPlatform/lm3s811-evb.table)]]
