--- a/results/runs.page
+++ b/results/runs.page
@@ -1,3 +1,3 @@
-
-  = Run overview =
-  [[SortCSVsourceTable(source:page/trunk/results/runs.table)]]
+== Run overview ==
+ 
+[[SortCSVsourceTable(source:page/trunk/results/runs.table)]]
