--- a/results/runs/1.page
+++ b/results/runs/1.page
@@ -3,5 +3,5 @@
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/1.table)]]
   
-== Measure Results ==
+=== Measure Results ===
 [[SortCSVsourceTable(source:page/trunk/results/measuresByRun/1.table)]]
