--- a/results/runs/2.page
+++ b/results/runs/2.page
@@ -3,5 +3,5 @@
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/2.table)]]
   
-== Measure Results ==
+=== Measure Results ===
 [[SortCSVsourceTable(source:page/trunk/results/measuresByRun/2.table)]]
