--- a/results/runs/1.page
+++ b/results/runs/1.page
@@ -1,6 +1,12 @@
 
 == Run 1 ==
+
+ * Date: 20100615
+ * Hostname: alix
+ * Platform: lm3s811-evb
+ * XBX-Version 1.1.0
     
+
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/1.table)]]
   
