--- a/results/ciphers/cubehash1632.page
+++ b/results/ciphers/cubehash1632.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash1632 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash1632.table)]]
