--- a/results/ciphers/cubehash84.page
+++ b/results/ciphers/cubehash84.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash84 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash84.table)]]
