--- a/results/ciphers/essence224.page
+++ b/results/ciphers/essence224.page
@@ -1,6 +1,6 @@
 
 == Cipher essence224 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/essence224.table)]]
