--- a/results/ciphers/essence256.page
+++ b/results/ciphers/essence256.page
@@ -1,6 +1,6 @@
 
 == Cipher essence256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/essence256.table)]]
