--- a/results/ciphers/essence384.page
+++ b/results/ciphers/essence384.page
@@ -1,6 +1,6 @@
 
 == Cipher essence384 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/essence384.table)]]
