--- a/results/ciphers/essence512.page
+++ b/results/ciphers/essence512.page
@@ -1,6 +1,6 @@
 
 == Cipher essence512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/essence512.table)]]
