--- a/results/ciphers/fugue256.page
+++ b/results/ciphers/fugue256.page
@@ -1,6 +1,6 @@
 
 == Cipher fugue256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/fugue256.table)]]
