--- a/results/ciphers/fugue512.page
+++ b/results/ciphers/fugue512.page
@@ -1,6 +1,6 @@
 
 == Cipher fugue512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/fugue512.table)]]
