--- a/results/ciphers/groestl512.page
+++ b/results/ciphers/groestl512.page
@@ -1,6 +1,6 @@
 
 == Cipher groestl512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/groestl512.table)]]
