--- a/results/ciphers/jh224.page
+++ b/results/ciphers/jh224.page
@@ -1,6 +1,6 @@
 
 == Cipher jh224 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/jh224.table)]]
