--- a/results/ciphers/jh256.page
+++ b/results/ciphers/jh256.page
@@ -1,6 +1,6 @@
 
 == Cipher jh256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/jh256.table)]]
