--- a/results/ciphers/jh384.page
+++ b/results/ciphers/jh384.page
@@ -1,6 +1,6 @@
 
 == Cipher jh384 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/jh384.table)]]
