--- a/results/ciphers/jh512.page
+++ b/results/ciphers/jh512.page
@@ -1,6 +1,6 @@
 
 == Cipher jh512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/jh512.table)]]
