--- a/results/ciphers/luffa384.page
+++ b/results/ciphers/luffa384.page
@@ -1,6 +1,6 @@
 
 == Cipher luffa384 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/luffa384.table)]]
