--- a/results/ciphers/luffa512.page
+++ b/results/ciphers/luffa512.page
@@ -1,6 +1,6 @@
 
 == Cipher luffa512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/luffa512.table)]]
