--- a/results/ciphers/mcssha6.page
+++ b/results/ciphers/mcssha6.page
@@ -1,6 +1,6 @@
 
 == Cipher mcssha6 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/mcssha6.table)]]
