--- a/results/ciphers/skein512.page
+++ b/results/ciphers/skein512.page
@@ -1,6 +1,6 @@
 
 == Cipher skein512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/skein512.table)]]
