--- a/results/ciphers/whirlpool.page
+++ b/results/ciphers/whirlpool.page
@@ -1,6 +1,6 @@
 
 == Cipher whirlpool ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/whirlpool.table)]]
