--- a/results/ciphers/0hash.page
+++ b/results/ciphers/0hash.page
@@ -1,6 +1,6 @@
 
 == Cipher 0hash ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/0hash.table)]]
