--- a/results/ciphers/cubehash161.page
+++ b/results/ciphers/cubehash161.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash161 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash161.table)]]
