--- a/results/ciphers/cubehash1616.page
+++ b/results/ciphers/cubehash1616.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash1616 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash1616.table)]]
