--- a/results/ciphers/cubehash164.page
+++ b/results/ciphers/cubehash164.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash164 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash164.table)]]
