--- a/results/ciphers/cubehash81.page
+++ b/results/ciphers/cubehash81.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash81 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash81.table)]]
