--- a/results/ciphers/cubehash816.page
+++ b/results/ciphers/cubehash816.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash816 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash816.table)]]
