--- a/results/ciphers/cubehash82.page
+++ b/results/ciphers/cubehash82.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash82 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash82.table)]]
