--- a/results/ciphers/cubehash832.page
+++ b/results/ciphers/cubehash832.page
@@ -1,6 +1,6 @@
 
 == Cipher cubehash832 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/cubehash832.table)]]
