--- a/results/ciphers/echo512.page
+++ b/results/ciphers/echo512.page
@@ -1,6 +1,6 @@
 
 == Cipher echo512 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/echo512.table)]]
