--- a/results/ciphers/echosp256.page
+++ b/results/ciphers/echosp256.page
@@ -1,6 +1,6 @@
 
 == Cipher echosp256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/echosp256.table)]]
