--- a/results/ciphers/groestl256.page
+++ b/results/ciphers/groestl256.page
@@ -1,6 +1,6 @@
 
 == Cipher groestl256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/groestl256.table)]]
