--- a/results/ciphers/mcssha4.page
+++ b/results/ciphers/mcssha4.page
@@ -1,6 +1,6 @@
 
 == Cipher mcssha4 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/mcssha4.table)]]
