--- a/results/ciphers/shavite3256.page
+++ b/results/ciphers/shavite3256.page
@@ -1,6 +1,6 @@
 
 == Cipher shavite3256 ==
      
-=== Fastest Algorithms ===
+=== Fastest Implementations ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerCipher/shavite3256.table)]]
