--- a/results/platforms/lm3s811-evb.page
+++ b/results/platforms/lm3s811-evb.page
@@ -1,6 +1,12 @@
 
 == Platform lm3s811-evb ==
-     
+
+
+This is a Stellaris LM3S811 Evaluation Board without any hardware modifications.
+
+See http://www.luminarymicro.com/products/ekk-lm3s811_evaluation_kit.html for more information.
+
+
 === Fastest Algorithms ===
 
 [[SortCSVsourceTable(source:page/trunk/results/fastestPerPlatform/lm3s811-evb.table)]]
