--- a/results/platforms/lm3s811-evb.page
+++ b/results/platforms/lm3s811-evb.page
@@ -4,7 +4,8 @@
 
 This is a Stellaris LM3S811 Evaluation Board without any hardware modifications.
 
-!http://www.bla.blub
+See !http://www.luminarymicro.com/products/ekk-lm3s811_evaluation_kit.html for more information.
+
 
 === Fastest Algorithms ===
 
