--- a/results/runs/2.page
+++ b/results/runs/2.page
@@ -14,4 +14,7 @@
 
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/2.table)]]
+
+=== Drift Measurements ===
+[[SortCSVsourceTable(source:page/trunk/results/driftByRun/2.table)]]
   
