--- a/results/runs/1.page
+++ b/results/runs/1.page
@@ -8,9 +8,10 @@
 
 
 
+[wiki:runs_1#MeasureResults Measure Results] - [wiki:runs_1#TryResults Try Results] - [wiki:runs_1#DriftMeasureMents Drift Measurements]
+
 === Measure Results ===
 [[SortCSVsourceTable(source:page/trunk/results/measuresByRun/1.table)]]
-    
 
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/1.table)]]
