--- a/results/runs/2.page
+++ b/results/runs/2.page
@@ -8,9 +8,10 @@
 
 
 
+[wiki:runs_2#MeasureResults Measure Results] - [wiki:runs_2#TryResults Try Results] - [wiki:runs_2#DriftMeasureMents Drift Measurements]
+
 === Measure Results ===
 [[SortCSVsourceTable(source:page/trunk/results/measuresByRun/2.table)]]
-    
 
 === Try Results ===
 [[SortCSVsourceTable(source:page/trunk/results/triesByRun/2.table)]]
