--- a/results/runs/2.page
+++ b/results/runs/2.page
@@ -8,7 +8,7 @@
 
 
 
-[wiki:runs_2#MeasureResults Measure Results] - [wiki:runs_2#TryResults Try Results] - [wiki:runs_2#DriftMeasureMents Drift Measurements]
+[wiki:runs_2#MeasureResults Measure Results] - [wiki:runs_2#TryResults Try Results] - [wiki:runs_2#DriftMeasurements Drift Measurements]
 
 === Measure Results ===
 [[SortCSVsourceTable(source:page/trunk/results/measuresByRun/2.table)]]
