--- a/results/runs/1.page
+++ b/results/runs/1.page
@@ -1,10 +1,12 @@
 
 == Run 1 ==
 
- * Date: 20100615
- * Hostname: alix
- * Platform: lm3s811-evb
- * XBX-Version 1.1.0
+ * Date: 20100618
+ * Hostname: toad
+ * Platform: atmega1281_16mhz
+ * XBX Version 1.1.0
+ * XBH Revision 00736
+ * Bootloader Revision 
 
 
 
