more link fixes

--- a/results/measureDetailsPage/1_0hash_empty.page
+++ b/results/measureDetailsPage/1_0hash_empty.page
@@ -1,5 +1,5 @@
 
-==  0hash empty in [wiki:run_1 Run 1] ==
+==  0hash empty in [wiki:runs_1 Run 1] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/1_0hash_empty.table)]]
