--- a/results/measureDetailsPage/7_blake32_light.page
+++ b/results/measureDetailsPage/7_blake32_light.page
@@ -1,5 +1,5 @@
 
-==  blake32 light in [wiki:run_7 Run 7] ==
+==  blake32 light in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_blake32_light.table)]]
