--- a/results/measureDetailsPage/7_cubehash161_spec.page
+++ b/results/measureDetailsPage/7_cubehash161_spec.page
@@ -1,5 +1,5 @@
 
-==  cubehash161 spec in [wiki:run_7 Run 7] ==
+==  cubehash161 spec in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_cubehash161_spec.table)]]
