--- a/results/measureDetailsPage/7_cubehash82_simple.page
+++ b/results/measureDetailsPage/7_cubehash82_simple.page
@@ -1,5 +1,5 @@
 
-==  cubehash82 simple in [wiki:run_7 Run 7] ==
+==  cubehash82 simple in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_cubehash82_simple.table)]]
