--- a/results/measureDetailsPage/7_groestl256_opt32-avr.page
+++ b/results/measureDetailsPage/7_groestl256_opt32-avr.page
@@ -1,5 +1,5 @@
 
-==  groestl256 opt32-avr in [wiki:run_7 Run 7] ==
+==  groestl256 opt32-avr in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_groestl256_opt32-avr.table)]]
