--- a/results/measureDetailsPage/1_blake32_light.page
+++ b/results/measureDetailsPage/1_blake32_light.page
@@ -1,5 +1,5 @@
 
-==  blake32 light in [wiki:run_1 Run 1] ==
+==  blake32 light in [wiki:runs_1 Run 1] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/1_blake32_light.table)]]
