--- a/results/measureDetailsPage/1_bmw256_daslabor_asm.page
+++ b/results/measureDetailsPage/1_bmw256_daslabor_asm.page
@@ -1,5 +1,5 @@
 
-==  bmw256 daslabor_asm in [wiki:run_1 Run 1] ==
+==  bmw256 daslabor_asm in [wiki:runs_1 Run 1] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/1_bmw256_daslabor_asm.table)]]
