--- a/results/measureDetailsPage/4_0hash_empty.page
+++ b/results/measureDetailsPage/4_0hash_empty.page
@@ -1,5 +1,5 @@
 
-==  0hash empty in [wiki:run_4 Run 4] ==
+==  0hash empty in [wiki:runs_4 Run 4] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/4_0hash_empty.table)]]
