--- a/results/measureDetailsPage/5_0hash_empty.page
+++ b/results/measureDetailsPage/5_0hash_empty.page
@@ -1,5 +1,5 @@
 
-==  0hash empty in [wiki:run_5 Run 5] ==
+==  0hash empty in [wiki:runs_5 Run 5] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/5_0hash_empty.table)]]
