--- a/results/measureDetailsPage/7_0hash_empty.page
+++ b/results/measureDetailsPage/7_0hash_empty.page
@@ -1,5 +1,5 @@
 
-==  0hash empty in [wiki:run_7 Run 7] ==
+==  0hash empty in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_0hash_empty.table)]]
