--- a/results/measureDetailsPage/7_groestl512_daslabor.page
+++ b/results/measureDetailsPage/7_groestl512_daslabor.page
@@ -1,5 +1,5 @@
 
-==  groestl512 daslabor in [wiki:run_7 Run 7] ==
+==  groestl512 daslabor in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_groestl512_daslabor.table)]]
