--- a/results/measureDetailsPage/7_mcssha4_ref.page
+++ b/results/measureDetailsPage/7_mcssha4_ref.page
@@ -1,5 +1,5 @@
 
-==  mcssha4 ref in [wiki:run_7 Run 7] ==
+==  mcssha4 ref in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_mcssha4_ref.table)]]
