--- a/results/measureDetailsPage/7_mcssha6_ref.page
+++ b/results/measureDetailsPage/7_mcssha6_ref.page
@@ -1,5 +1,5 @@
 
-==  mcssha6 ref in [wiki:run_7 Run 7] ==
+==  mcssha6 ref in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_mcssha6_ref.table)]]
