--- a/results/measureDetailsPage/7_skein512_daslabor_asm.page
+++ b/results/measureDetailsPage/7_skein512_daslabor_asm.page
@@ -1,5 +1,5 @@
 
-==  skein512 daslabor_asm in [wiki:run_7 Run 7] ==
+==  skein512 daslabor_asm in [wiki:runs_7 Run 7] ==
 
 === Measure Details ===
 [[SortCSVsourceTable(source:page/trunk/results/measureDetails/7_skein512_daslabor_asm.table)]]
