--- a/results/platformsciphers/lm3s811-evb_cubehash161.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash161.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash161 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash161 cubehash161] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash161_lm3s811-evb.table)]]
 
