--- a/results/platformsciphers/lm3s811-evb_cubehash832.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash832.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash832 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash832 cubehash832] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash832_lm3s811-evb.table)]]
 
