--- a/results/platformsciphers/lm3s811-evb_luffa384.page
+++ b/results/platformsciphers/lm3s811-evb_luffa384.page
@@ -1,5 +1,5 @@
 
-== Implementations of luffa384 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_luffa384 luffa384] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/luffa384_lm3s811-evb.table)]]
 
