--- a/results/platformsciphers/atmega1281_16mhz_0hash.page
+++ b/results/platformsciphers/atmega1281_16mhz_0hash.page
@@ -1,5 +1,5 @@
 
-== Implementations of 0hash on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_0hash 0hash] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/0hash_atmega1281_16mhz.table)]]
 
