--- a/results/platformsciphers/atmega1281_16mhz_blake32.page
+++ b/results/platformsciphers/atmega1281_16mhz_blake32.page
@@ -1,5 +1,5 @@
 
-== Implementations of blake32 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_blake32 blake32] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/blake32_atmega1281_16mhz.table)]]
 
