--- a/results/platformsciphers/atmega1281_16mhz_blake64.page
+++ b/results/platformsciphers/atmega1281_16mhz_blake64.page
@@ -1,5 +1,5 @@
 
-== Implementations of blake64 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_blake64 blake64] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/blake64_atmega1281_16mhz.table)]]
 
