--- a/results/platformsciphers/atmega1281_16mhz_cubehash162.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash162.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash162 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash162 cubehash162] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash162_atmega1281_16mhz.table)]]
 
