--- a/results/platformsciphers/atmega1281_16mhz_cubehash164.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash164.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash164 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash164 cubehash164] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash164_atmega1281_16mhz.table)]]
 
