--- a/results/platformsciphers/atmega1281_16mhz_cubehash816.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash816.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash816 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash816 cubehash816] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash816_atmega1281_16mhz.table)]]
 
