--- a/results/platformsciphers/atmega1281_16mhz_cubehash832.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash832.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash832 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash832 cubehash832] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash832_atmega1281_16mhz.table)]]
 
