--- a/results/platformsciphers/atmega1281_16mhz_cubehash84.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash84.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash84 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash84 cubehash84] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash84_atmega1281_16mhz.table)]]
 
