--- a/results/platformsciphers/atmega1281_16mhz_cubehash88.page
+++ b/results/platformsciphers/atmega1281_16mhz_cubehash88.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash88 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_cubehash88 cubehash88] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash88_atmega1281_16mhz.table)]]
 
