--- a/results/platformsciphers/atmega1281_16mhz_echo256.page
+++ b/results/platformsciphers/atmega1281_16mhz_echo256.page
@@ -1,5 +1,5 @@
 
-== Implementations of echo256 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_echo256 echo256] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/echo256_atmega1281_16mhz.table)]]
 
