--- a/results/platformsciphers/atmega1281_16mhz_echo512.page
+++ b/results/platformsciphers/atmega1281_16mhz_echo512.page
@@ -1,5 +1,5 @@
 
-== Implementations of echo512 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_echo512 echo512] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/echo512_atmega1281_16mhz.table)]]
 
