--- a/results/platformsciphers/atmega1281_16mhz_essence224.page
+++ b/results/platformsciphers/atmega1281_16mhz_essence224.page
@@ -1,5 +1,5 @@
 
-== Implementations of essence224 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_essence224 essence224] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/essence224_atmega1281_16mhz.table)]]
 
