--- a/results/platformsciphers/atmega1281_16mhz_essence256.page
+++ b/results/platformsciphers/atmega1281_16mhz_essence256.page
@@ -1,5 +1,5 @@
 
-== Implementations of essence256 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_essence256 essence256] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/essence256_atmega1281_16mhz.table)]]
 
