--- a/results/platformsciphers/atmega1281_16mhz_groestl256.page
+++ b/results/platformsciphers/atmega1281_16mhz_groestl256.page
@@ -1,5 +1,5 @@
 
-== Implementations of groestl256 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_groestl256 groestl256] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/groestl256_atmega1281_16mhz.table)]]
 
