--- a/results/platformsciphers/atmega1281_16mhz_groestl512.page
+++ b/results/platformsciphers/atmega1281_16mhz_groestl512.page
@@ -1,5 +1,5 @@
 
-== Implementations of groestl512 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_groestl512 groestl512] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/groestl512_atmega1281_16mhz.table)]]
 
