--- a/results/platformsciphers/atmega1281_16mhz_jh224.page
+++ b/results/platformsciphers/atmega1281_16mhz_jh224.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh224 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_jh224 jh224] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh224_atmega1281_16mhz.table)]]
 
