--- a/results/platformsciphers/atmega1281_16mhz_jh256.page
+++ b/results/platformsciphers/atmega1281_16mhz_jh256.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh256 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_jh256 jh256] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh256_atmega1281_16mhz.table)]]
 
