--- a/results/platformsciphers/atmega1281_16mhz_jh384.page
+++ b/results/platformsciphers/atmega1281_16mhz_jh384.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh384 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_jh384 jh384] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh384_atmega1281_16mhz.table)]]
 
