--- a/results/platformsciphers/atmega1281_16mhz_jh512.page
+++ b/results/platformsciphers/atmega1281_16mhz_jh512.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh512 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_jh512 jh512] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh512_atmega1281_16mhz.table)]]
 
