--- a/results/platformsciphers/atmega1281_16mhz_keccak512.page
+++ b/results/platformsciphers/atmega1281_16mhz_keccak512.page
@@ -1,5 +1,5 @@
 
-== Implementations of keccak512 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_keccak512 keccak512] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/keccak512_atmega1281_16mhz.table)]]
 
