--- a/results/platformsciphers/atmega1281_16mhz_mcssha4.page
+++ b/results/platformsciphers/atmega1281_16mhz_mcssha4.page
@@ -1,5 +1,5 @@
 
-== Implementations of mcssha4 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_mcssha4 mcssha4] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/mcssha4_atmega1281_16mhz.table)]]
 
