--- a/results/platformsciphers/atmega1281_16mhz_mcssha5.page
+++ b/results/platformsciphers/atmega1281_16mhz_mcssha5.page
@@ -1,5 +1,5 @@
 
-== Implementations of mcssha5 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_mcssha5 mcssha5] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/mcssha5_atmega1281_16mhz.table)]]
 
