--- a/results/platformsciphers/atmega1281_16mhz_mcssha6.page
+++ b/results/platformsciphers/atmega1281_16mhz_mcssha6.page
@@ -1,5 +1,5 @@
 
-== Implementations of mcssha6 on Platform atmega1281_16mhz ==
+== Implementations of [wiki:ciphers_mcssha6 mcssha6] on Platform [wiki:platforms_atmega1281_16mhz atmega1281_16mhz] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/mcssha6_atmega1281_16mhz.table)]]
 
