--- a/results/platformsciphers/lm3s811-evb_0hash.page
+++ b/results/platformsciphers/lm3s811-evb_0hash.page
@@ -1,5 +1,5 @@
 
-== Implementations of 0hash on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_0hash 0hash] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/0hash_lm3s811-evb.table)]]
 
