--- a/results/platformsciphers/lm3s811-evb_blake32.page
+++ b/results/platformsciphers/lm3s811-evb_blake32.page
@@ -1,5 +1,5 @@
 
-== Implementations of blake32 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_blake32 blake32] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/blake32_lm3s811-evb.table)]]
 
