--- a/results/platformsciphers/lm3s811-evb_bmw256.page
+++ b/results/platformsciphers/lm3s811-evb_bmw256.page
@@ -1,5 +1,5 @@
 
-== Implementations of bmw256 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_bmw256 bmw256] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/bmw256_lm3s811-evb.table)]]
 
