--- a/results/platformsciphers/lm3s811-evb_cubehash1616.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash1616.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash1616 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash1616 cubehash1616] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash1616_lm3s811-evb.table)]]
 
