--- a/results/platformsciphers/lm3s811-evb_cubehash1632.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash1632.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash1632 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash1632 cubehash1632] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash1632_lm3s811-evb.table)]]
 
