--- a/results/platformsciphers/lm3s811-evb_cubehash164.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash164.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash164 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash164 cubehash164] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash164_lm3s811-evb.table)]]
 
