--- a/results/platformsciphers/lm3s811-evb_cubehash168.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash168.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash168 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash168 cubehash168] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash168_lm3s811-evb.table)]]
 
