--- a/results/platformsciphers/lm3s811-evb_cubehash816.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash816.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash816 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash816 cubehash816] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash816_lm3s811-evb.table)]]
 
