--- a/results/platformsciphers/lm3s811-evb_cubehash82.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash82.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash82 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash82 cubehash82] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash82_lm3s811-evb.table)]]
 
