--- a/results/platformsciphers/lm3s811-evb_cubehash88.page
+++ b/results/platformsciphers/lm3s811-evb_cubehash88.page
@@ -1,5 +1,5 @@
 
-== Implementations of cubehash88 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_cubehash88 cubehash88] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/cubehash88_lm3s811-evb.table)]]
 
