--- a/results/platformsciphers/lm3s811-evb_jh224.page
+++ b/results/platformsciphers/lm3s811-evb_jh224.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh224 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_jh224 jh224] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh224_lm3s811-evb.table)]]
 
