--- a/results/platformsciphers/lm3s811-evb_jh256.page
+++ b/results/platformsciphers/lm3s811-evb_jh256.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh256 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_jh256 jh256] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh256_lm3s811-evb.table)]]
 
