--- a/results/platformsciphers/lm3s811-evb_jh512.page
+++ b/results/platformsciphers/lm3s811-evb_jh512.page
@@ -1,5 +1,5 @@
 
-== Implementations of jh512 on Platform lm3s811-evb ==
+== Implementations of [wiki:ciphers_jh512 jh512] on Platform [wiki:platforms_lm3s811-evb lm3s811-evb] ==
 
 [[SortCSVsourceTable(source:page/trunk/results/cipherImplementationsPerPlatform/jh512_lm3s811-evb.table)]]
 
