added sha3 info texts

--- a/results/sha3ciphers.page
+++ b/results/sha3ciphers.page
@@ -1,4 +1,4 @@
 
-  = Hash Function Overview =
+  = Hash Function Overview (SHA3 Round 2 Only)=
 
   [[SortCSVsourceTable(source:page/trunk/results/sha3ciphers.table)]]
