--- a/results/sha3platforms.page
+++ b/results/sha3platforms.page
@@ -1,4 +1,4 @@
 
-  = Platform Overview =
+  = Platform Overview (SHA3 Round 2 Only)=
 
   [[SortCSVsourceTable(source:page/trunk/results/sha3platforms.table)]]
