--- a/results/platforms.page
+++ b/results/platforms.page
@@ -1,4 +1,6 @@
 
-  = Platform Overview =
+= Platform Overview =
+[wiki:sha3platforms Show only SHA3 round 2 candidates]
+
 
   [[SortCSVsourceTable(source:page/trunk/results/platforms.table)]]
