--- a/results/platforms/lm3s811-evb.page
+++ b/results/platforms/lm3s811-evb.page
@@ -1,5 +1,7 @@
 
 == Platform lm3s811-evb ==
+[wiki:sha3platforms_lm3s811-evb Show only SHA3 round 2 candidates]
+
 
 
 This is a Stellaris LM3S811 Evaluation Board without any hardware modifications.
