--- a/results/sha3platforms.page
+++ b/results/sha3platforms.page
@@ -1,4 +1,6 @@
 
-  = Platform Overview (SHA3 Round 2 Only)=
+= Platform Overview (SHA3 Round 2 Only)=
+[wiki:platforms Show full platform list]
+
 
   [[SortCSVsourceTable(source:page/trunk/results/sha3platforms.table)]]
